# garagem14

./: db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
garagem/: models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_remove_veiculo_ano_remove_veiculo_categoria_and_more.py
garagem/models/: acessorio.py  categoria.py  cor.py  marca.py  veiculo.py
garagem/serializers/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  veiculo.py
garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
